apps/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  selector:
    app.kubernetes.io/name: openwebui
  ports:
    - name: http
      port: 80
      targetPort: http
